[workspace]
members = [
    "crates/collections",
    "crates/c_api/artifact",
    "crates/c_api/macro",
    "crates/cli",
    "crates/core",
    "crates/wasmi",
    "crates/wasi",
    "crates/ir",
    "fuzz",
]
exclude = []
resolver = "2"

[workspace.package]
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
repository = "https://github.com/wasmi-labs/wasmi"
version = "0.37.2"
rust-version = "1.79"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["wasm", "webassembly", "interpreter", "vm"]
categories = ["wasm", "no-std", "virtualization"]
exclude = ["tests"]

[workspace.dependencies]
wasmi = { version = "0.37.2", path = "crates/wasmi", default-features = false }
wasmi_wasi = { version = "0.37.2", path = "crates/wasi", default-features = false }
wasmi_core = { version = "0.37.2", path = "crates/core", default-features = false }
wasmi_ir = { version = "0.37.2", path = "crates/ir", default-features = false }
wasmi_collections = { version = "0.37.2", path = "crates/collections", default-features = false }
wasmi_c_api_impl = { version = "0.37.2", path = "crates/c_api" }
wasmi_c_api_macros = { version = "0.37.2", path = "crates/c_api/macro" }
num-traits = { version = "0.2.8", default-features = false }

[profile.bench]
lto = "fat"
codegen-units = 1
