[workspace]
members = [
    "crates/collections",
    "crates/c_api/artifact",
    "crates/c_api/macro",
    "crates/cli",
    "crates/core",
    "crates/wasmi",
    "crates/wasi",
    "crates/ir",
    "crates/fuzz",
    "crates/wast",
    "fuzz",
]
exclude = []
resolver = "2"

[workspace.package]
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
repository = "https://github.com/wasmi-labs/wasmi"
version = "0.41.3"
rust-version = "1.82"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["wasm", "webassembly", "interpreter", "vm"]
categories = ["wasm", "no-std", "virtualization"]
exclude = ["tests"]

[workspace.dependencies]
wasmi = { version = "0.41.3", path = "crates/wasmi", default-features = false }
wasmi_wasi = { version = "0.41.3", path = "crates/wasi", default-features = false }
wasmi_core = { version = "0.41.3", path = "crates/core", default-features = false }
wasmi_ir = { version = "0.41.3", path = "crates/ir", default-features = false }
wasmi_collections = { version = "0.41.3", path = "crates/collections", default-features = false }
wasmi_c_api_impl = { version = "0.41.3", path = "crates/c_api" }
wasmi_c_api_macros = { version = "0.41.3", path = "crates/c_api/macro" }
wasmi_fuzz = { version = "0.41.3", path = "crates/fuzz" }
wasmi_wast = { version = "0.41.3", path = "crates/wast" }

[profile.bench]
lto = "fat"
codegen-units = 1
