[package]
name = "fuzz"
version = "0.0.0"
authors.workspace = true
readme.workspace = true
license.workspace = true
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
wasmi_fuzz = { workspace = true }
libfuzzer-sys = "0.4.7"
wasmi-stack = { package = "wasmi", version = "0.31.2", optional = true }
wasmtime = { version = "26.0.0", optional = true }
wasmi = { workspace = true, features = ["std"] }
wasm-smith = "0.219.1"
arbitrary = "1.3.2"

[features]
default = []
differential = ["dep:wasmtime", "dep:wasmi-stack"]

[[bin]]
name = "translate"
path = "fuzz_targets/translate.rs"
test = false
doc = false

[[bin]]
name = "execute"
path = "fuzz_targets/execute.rs"
test = false
doc = false

[[bin]]
name = "differential"
path = "fuzz_targets/differential.rs"
required-features = ["differential"]
test = false
doc = false
