[package]
name = "fuzz"
version = "0.0.0"
authors.workspace = true
readme.workspace = true
license.workspace = true
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
wasmi_fuzz = { workspace = true }
wasmi = { workspace = true, features = ["std"] }
wasm-smith = "0.219.1"
libfuzzer-sys = "0.4.7"
arbitrary = "1.3.2"

[features]
default = []
differential = ["wasmi_fuzz/differential"]

[[bin]]
name = "translate"
path = "fuzz_targets/translate.rs"
test = false
doc = false

[[bin]]
name = "execute"
path = "fuzz_targets/execute.rs"
test = false
doc = false

[[bin]]
name = "differential"
path = "fuzz_targets/differential.rs"
required-features = ["differential"]
test = false
doc = false
