[package]
name = "wasmi_v1"
version = "0.11.0"
edition = "2021"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin.freyler@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/paritytech/wasmi"
documentation = "https://paritytech.github.io/wasmi/"
description = "WebAssembly interpreter"
keywords = ["wasm", "webassembly", "bytecode", "interpreter"]

[dependencies]
wasmparser = { version = "0.82", package = "wasmparser-nostd", default-features = false }
wasmi_core = { version = "0.1", path = "../core", default-features = false }
validation = { package = "wasmi-validation", version = "0.4", path = "../validation", default-features = false }
parity-wasm = { version = "0.42.0", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }

[dev-dependencies]
wat = "1"

[features]
default = ["std"]
# Use `no-default-features` for a `no_std` build.
std = [
    "wasmparser/std",
    "parity-wasm/std",
    "validation/std",
    "spin/std",
]
# Enables OS supported virtual memory.
#
# Note
#
# - This feature is only supported on 64-bit platforms.
#   For 32-bit platforms the linear memory will fallback to using the Vec
#   based implementation.
# - The default is to fall back is an inefficient vector based implementation.
# - By nature this feature requires `region` and the Rust standard library.
virtual_memory = ["wasmi_core/virtual_memory", "std"]
