[package]
name = "wasmi"
version = "0.15.0"
edition = "2021"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin.freyler@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/paritytech/wasmi"
documentation = "https://paritytech.github.io/wasmi/"
description = "WebAssembly interpreter"
keywords = ["wasm", "webassembly", "bytecode", "interpreter"]
exclude = [ "tests/*", "benches/*" ]

[dependencies]
wasmparser = { version = "0.83", package = "wasmparser-nostd", default-features = false }
wasmi_core = { version = "0.3", path = "../core", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }

[dev-dependencies]
wat = "1"
assert_matches = "1.5"
wast = "44.0"
anyhow = "1.0"
criterion = "0.3.5"

[features]
default = ["std"]
# Use `no-default-features` for a `no_std` build.
std = [
    "wasmi_core/std",
    "wasmparser/std",
    "spin/std",
]

[[bench]]
name = "benches"
harness = false
