[package]
name = "wasmi_arena"
version = "0.5.0"
documentation = "https://docs.rs/wasmi_arena/"
description = "Entity arena data structures for wasmi"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[features]
default = ["std"]
std = []
