[package]
name = "wasmi_c_api_impl"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi_c_api_impl"
description = "C bindings for the Wasmi WebAssembly interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
links = "wasmi_c_api"

[dependencies]
wasmi = { workspace = true, features = ["validate"] }
wasmi_c_api_macros = { workspace = true }

[lib]
name = "wasmi_c_api"
test = false
doctest = false

[features]
default = ["std", "memory64"]
std = ["wasmi/std"]
memory64 = ["wasmi/memory64"]
simd = ["wasmi/simd"]
portable-dispatch = ["wasmi/portable-dispatch"]
indirect-dispatch = ["wasmi/indirect-dispatch"]
extra-checks = ["wasmi/extra-checks"]
hash-collections = ["wasmi/hash-collections"]
prefer-btree-collections = ["wasmi/prefer-btree-collections"]
deterministic = ["wasmi/deterministic"]
libm = ["wasmi/libm"]
prefix-symbols = []
