[package]
name = "wasmi_cli"
version.workspace = true
documentation = "https://docs.rs/wasmi/"
description = "WebAssembly interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
wasmi = { workspace = true }
wasmi_wasi = { workspace = true }
wat = "1"

[dev-dependencies]
assert_cmd = "2.0.7"

# We need to put this [profile.release] section due to this bug in Cargo:
# https://github.com/rust-lang/cargo/issues/8264
# Uncomment the lines below before publishing a new `wasmi_cli` release to crates.io.
# [profile.release]
# lto = "fat"
# codegen-units = 1
