[package]
name = "wasmi_cli"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi/"
description = "WebAssembly interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[[bin]]
name = "wasmi"
path = "src/main.rs"
doc = false

[dependencies]
wasmi = { workspace = true }
wasmi_wasi = { workspace = true, optional = true }
wasmi_wast = { workspace = true, optional = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.7"

[features]
default = ["run", "wast", "wasi", "wat"]
hash-collections = ["wasmi/hash-collections"]
prefer-btree-collections = ["wasmi/prefer-btree-collections"]
simd = ["wasmi/simd"]
wasi = ["wasmi_wasi"]
wat = ["wasmi/wat"]
run = []
wast = ["wasmi_wast"]
portable-dispatch = ["wasmi/portable-dispatch"]
indirect-dispatch = ["wasmi/indirect-dispatch"]

# We need to put this [profile.release] section due to this bug in Cargo:
# https://github.com/rust-lang/cargo/issues/8264
# Uncomment the lines below before publishing a new `wasmi_cli` release to crates.io.
# [profile.release]
# lto = "fat"
# codegen-units = 1
