[package]
name = "wasmi_cli"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi/"
description = "WebAssembly interpreter"
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[[bin]]
name = "wasmi"
path = "src/main.rs"
doc = false

[dependencies]
wasmi = { workspace = true, features = ["std"] }
wasmi_wasi = { workspace = true, optional = true }
wasmi_wast = { workspace = true, optional = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.7"

[features]
default = ["stable", "run", "wast", "wasi", "wat", "validate", "memory64"]
hash-collections = ["wasmi/hash-collections"]
prefer-btree-collections = ["wasmi/prefer-btree-collections"]
simd = ["wasmi/simd"]
wasi = ["wasmi_wasi"]
# Note: `wat` (and `wast`) imply `validate` because parsing the Wasm text format
#       and running the spec testsuite only make sense with Wasm validation enabled.
wat = ["wasmi/wat", "validate"]
run = []
wast = ["wasmi_wast", "validate"]
# Enables Wasm validation. Without it the CLI compiles `Module` via the `unsafe`
# unchecked path and never validates its inputs (only safe for trusted Wasm).
validate = ["wasmi/validate"]
portable-dispatch = ["wasmi/portable-dispatch"]
indirect-dispatch = ["wasmi/indirect-dispatch"]
stable = ["wasmi/stable"]
unstable = ["wasmi/unstable"]
memory64 = ["wasmi/memory64"]
deterministic = ["wasmi/deterministic"]

# We need to put this [profile.release] section due to this bug in Cargo:
# https://github.com/rust-lang/cargo/issues/8264
# Uncomment the lines below before publishing a new `wasmi_cli` release to crates.io.
# [profile.release]
# lto = "fat"
# codegen-units = 1
