[package]
name = "wasmi_core"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi_core"
description = "Core primitives for the wasmi WebAssembly interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
libm = { version = "0.2.11", default-features = false }
downcast-rs = { version = "2.0.1", default-features = false, features = ["sync"] }

[dev-dependencies]
rand = "0.9.0"

[features]
default = ["std"]
# Use `no-default-features` for a `no_std` build.
std = ["downcast-rs/std"]

# Enable this to use 128-bit untyped values.
#
# This mainly affects the `UntypedVal` type since it acts as Wasmi's register cell type.
value128 = []

[package.metadata.cargo-udeps.ignore]
# cargo-udeps cannot detect that libm is used for no_std targets only.
normal = ["libm"]
