[package]
name = "wasmi_core"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi_core"
description = "Core primitives for the wasmi WebAssembly interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
libm = { version = "0.2.16", default-features = false }

[features]
default = ["std"]
# Use `no-default-features` for a `no_std` build.
std = []
# Enables the Wasm `simd` proposal.
#
# This also changes the size of `RawVal` from 64-bit to 128-bit
# which may have significant impact on performance and memory usage.
simd = []
# Enables support for the Wasm `memory64` proposal, i.e. 64-bit linear memories.
#
# Disabling this feature allows Wasmi to omit the overflow check from the
# effective address computation of every load and store operation, since all
# memory indices are then guaranteed to be 32-bit.
memory64 = []
libm = []
canonicalize_nan = []

[package.metadata.cargo-udeps.ignore]
# cargo-udeps cannot detect that libm is used for no_std targets only.
normal = ["libm"]

[package.metadata.docs.rs]
all-features = true
