[package]
name = "wasmi_fuzz"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi_fuzz"
description = "Fuzzing utilities and infrastructure for the Wasmi interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
publish = false

[dependencies]
wasmi = { workspace = true, features = ["std", "simd"] }
wasmtime = { workspace = true, optional = true, features = [
    "cranelift",
    "runtime",
    "std",
] }
wasm-smith = { workspace = true }
wasmprinter = { workspace = true }
wasmi-stack = { package = "wasmi", version = "0.31.2", features = ["std"], optional = true }
wasmi-v049 = { package = "wasmi", version = "0.49.0", features = ["std", "simd", "extra-checks"], optional = true }
arbitrary = "1.3.2"
sha2 = "0.10"
anyhow = "1.0.91"

[features]
default = []
differential = [
    "dep:wasmi-stack",
    "dep:wasmi-v049",
    "dep:wasmtime",
]
