[package]
name = "wasmi_fuzz"
version.workspace = true
# rust-version.workspace = true # cannot use `rust-version.workspace = true` due to Wasmtime dependency
documentation = "https://docs.rs/wasmi_fuzz"
description = "Fuzzing utilities and infrastructure for the Wasmi interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
publish = false

[dependencies]
wasmi = { workspace = true, features = ["std", "simd", "portable-dispatch", "extra-checks"] }
wasmtime = { workspace = true, optional = true, features = [
    "cranelift",
    "runtime",
    "std",
    "gc", # required for full reference-types support in fuzzing
    "gc-drc", # required because of `gc`
] }
wasm-smith = { workspace = true }
wasmprinter = { workspace = true }
wasmi-v1 = { package = "wasmi", version = "1.0.8", features = ["std", "simd", "extra-checks"], optional = true }
arbitrary = "1.4"
sha2 = "0.10.9"
anyhow = "1.0.101"

[features]
default = []
# This needs at least one of the `wasmi-v0`, `wasmi-v1` or `wasmtime` crate features enabled to compile.
differential = []
wasmi-v1 = ["dep:wasmi-v1"]
wasmtime = ["dep:wasmtime"]
