[package]
name = "wasmi_ir"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi_ir/"
description = "WebAssembly interpreter internal bytecode representation"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = [
    "benches/wat",
    "benches/wasm",
    "tests/spec/testsuite",
    "**.wast",
]

[dependencies]
wasmi_core = { workspace = true }

[features]
default = ["std"]
std = [
    "wasmi_core/std",
]
simd = ["wasmi_core/simd"]
# Enables support for the Wasm `memory64` proposal, i.e. 64-bit linear memories.
#
# Disabling this feature narrows the `offset` field of generic load and store
# operators from 64-bit to 32-bit, shrinking their encoded bytecode size.
memory64 = []
slot16 = []

[package.metadata.docs.rs]
features = ["std", "simd"]
